[gd_scene load_steps=4 format=2]

[ext_resource path="res://sprites/symbols/sync.svg" type="Texture" id=1]
[ext_resource path="res://sprites/pawprint-logo.svg" type="Texture" id=2]
[ext_resource path="res://scripts/news_window.gd" type="Script" id=3]

[node name="NewsWin" type="WindowDialog"]
visible = true
anchor_left = 0.15375
anchor_top = 0.144
anchor_right = 0.84625
anchor_bottom = 0.856
rect_min_size = Vector2( 540, 340 )
window_title = "News"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="News" type="ItemList" parent="."]
anchor_top = 0.179775
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -3.8147e-06
max_text_lines = 5
auto_height = true
same_column_width = true
icon_mode = 0
__meta__ = {
"_edit_use_anchors_": true
}

[node name="NewsBtns" type="HBoxContainer" parent="."]
anchor_top = 0.0280899
anchor_right = 1.0
anchor_bottom = 0.13764
margin_top = 0.748672
margin_bottom = 0.748837
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="HTTPRequest" type="HTTPRequest" parent="NewsBtns"]

[node name="Logo" type="TextureRect" parent="NewsBtns"]
margin_left = 79.0
margin_right = 367.0
margin_bottom = 39.0
texture = ExtResource( 2 )
stretch_mode = 4
__meta__ = {
"_edit_use_anchors_": true
}

[node name="VSeparator" type="VSeparator" parent="NewsBtns"]
margin_left = 397.0
margin_right = 401.0
margin_bottom = 39.0

[node name="SyncBtn" type="Button" parent="NewsBtns"]
margin_left = 431.0
margin_right = 475.0
margin_bottom = 39.0
icon = ExtResource( 1 )

[connection signal="request_completed" from="NewsBtns/HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="NewsBtns/SyncBtn" to="." method="_on_SyncBtn_pressed"]
